--- a/extension/popup.html
+++ b/extension/popup.html
@@ -185,10 +185,10 @@
 
   <div class="status-card">
     <div class="status-row">
-      <span class="status-label">Статус</span>
+      <span class="status-label">Status</span>
       <div class="status-value">
         <span class="status-dot" id="statusDot"></span>
-        <span id="statusText">Отключено</span>
+        <span id="statusText">Disconnected</span>
       </div>
     </div>
     <div class="server-info" id="serverInfo"></div>
@@ -197,19 +197,19 @@
   <div class="error-msg" id="errorMsg"></div>
 
   <div class="native-warning" id="nativeWarning" style="display: none;">
-    <div style="margin-bottom: 8px;">Нативный компонент не установлен или неверный Extension ID.</div>
+    <div style="margin-bottom: 8px;">Native host not installed or wrong Extension ID.</div>
     <div style="margin-bottom: 8px;">
-      <b>Твой Extension ID:</b><br>
+      <b>Your Extension ID:</b><br>
       <code id="extId" style="user-select: all; cursor: pointer;"></code>
     </div>
     <div style="font-size: 11px;">
-      Добавь этот ID в файл:<br>
+      Add this ID to:<br>
       <code>%LOCALAPPDATA%\OutlineProxy\com.outline.proxy.json</code><br>
-      в поле <code>allowed_origins</code>, затем перезапусти Chrome.
+      in <code>allowed_origins</code> field, then restart Chrome.
     </div>
   </div>
 
-  <button class="toggle-btn connect" id="toggleBtn">Подключиться</button>
+  <button class="toggle-btn connect" id="toggleBtn">Connect</button>
 
   <div class="input-group">
     <label>Outline Access Key (ss://...)</label>
@@ -217,8 +217,9 @@
   </div>
 
   <div class="footer">
-    VPN только для браузера. Игры идут напрямую.<br>
-    <span style="opacity: 0.7;">ID: </span><code id="footerExtId" style="user-select: all; cursor: pointer; font-size: 10px;"></code>
+    <a href="#" id="checkUpdates" style="color: #667eea; text-decoration: none; font-size: 11px;">Check for updates</a>
+    <br>
+    <span style="opacity: 0.5;">ID: </span><code id="footerExtId" style="user-select: all; cursor: pointer; font-size: 10px; opacity: 0.5;"></code>
   </div>
 
   <script src="popup.js"></script>
